# salaries-test-case

./: .env.dev  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile  alembic.ini  database.py  entrypoint.sh  main.py  mock_data_loader.py  requirements.txt
src/app/: dependencies.py  models.py  routers.py  schemes.py  utils.py
src/app/crud/: users.py
src/auth/: auth.py  dependencies.py  manager.py  models.py  routers.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 596be087d381_initial.py  6e20aac7f5c2_initial_migration.py  7247ca7df33a_initial.py  8018b5c46c95_initial.py  a8cc081d94b5_initial.py  dbdf5c991358_initial.py
src/tests/: conftest.py  test_api.py
src/users/: dependencies.py  models.py  routers.py  schemes.py  utils.py
